Issue #5905: time.strftime() is now using the locale encoding, instead of UTF-8, if the wcsftime() function is not available.